test/compile_errors/stage1/obj/undefined_function_call.zig
export fn a() void {
    b();
}

// undefined function call
//
// tmp.zig:2:5: error: use of undeclared identifier 'b'
